--- a/ch01/taco-cloud/src/main/resources/templates/home.html
+++ b/ch01/taco-cloud/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
   <title>Taco Cloud</title>
 </head>
 <body>
+  <h1>Hello <span th:text="${Name}"></span>!</h1>
   <h1>Welcome to...</h1>
   <img th:src="@{/images/TacoCloud.png}" alt="Logo">
 </body>
