--- a/ch05/taco-cloud5-security/src/main/resources/templates/design.html
+++ b/ch05/taco-cloud5-security/src/main/resources/templates/design.html
@@ -12,7 +12,7 @@
 <h1>Design your taco!</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
 
-<form method="POST" th:object="${taco}">
+<form method="POST" th:object="${taco}" th:action="@{/design}">
 
     <span class="validationError"
           th:if="${#fields.hasErrors('ingredients')}"
